# wagner.dev

./: .env.example  Cargo.toml  README.md  input.css  memory.md
pages/: error.html  index.html
server/: Cargo.toml
server/migrations/: V1__create_user_preferences.sql
server/src/: database.rs  main.rs  middleware.rs  token.rs
server/src/routes/: icons.rs  mod.rs  pages.rs  themes.rs
server/templates/: base.html  error.html  index.html
src/: main.rs  middleware.rs
src/routes/: pages.rs
static/: computed.256200ce.css  computed.f9cb2676.css  error.html  index.html
static/js/: theme.js
tailwind/: Cargo.toml
tailwind/src/: main.rs
