[package]
name = "dev"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tower-cookies = "0.11.0"
askama = "0.14.0"
askama_web = { version = "0.14.4", features = ["axum-0.8"] } 
refinery = { version = "0.8.16", features = ["tokio-postgres"] }
tokio-postgres = "0.7.13"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
jsonwebtoken = "9.2"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
once_cell = "1.19"
uuid = { version = "1.17.0", features = ["v4"] }
time = "0.3.41"
dotenv = "0.15"